name:                todo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/joshuaclayton/todo#readme
license:             BSD3
license-file:        LICENSE
author:              Josh Clayton
maintainer:          sayhi@joshuaclayton.me
copyright:           2016
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Todo
                     , TodoList
  build-depends:       base >= 4.7 && < 5
                     , text
                     , time
                     , containers >= 0.5.8
                     , lens
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

executable todo-exe
  hs-source-dirs:      app
                     , ui
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , todo
                     , brick
                     , text
                     , lens
                     , vty
                     , text-zipper
                     , vector
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010
  other-modules:       TodoUi
                     , TodoUi.Util
                     , TodoUi.Types
                     , TodoUi.Update
                     , TodoUi.View
                     , TodoUi.View.Homepage
                     , TodoUi.View.CreateNewTodo

test-suite todo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , todo
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joshuaclayton/todo
